[package]
name = "sise-atom"
version = "0.4.0-pre"
authors = ["Eduardo Sánchez Muñoz <esm@eduardosm.net>"]
edition = "2018"
description = "Auxiliary functions used to encode and decode SISE atom values."
repository = "https://github.com/eduardosm/rust-sise-atom"
license = "MIT OR Apache-2.0"
publish = false

[badges]
travis-ci = { repository = "eduardosm/rust-sise-atom" }

[dependencies]
flt2dec2flt = "0.1.0"
