[package]
name = "sise-atom"
version = "0.6.0-pre"
authors = ["Eduardo Sánchez Muñoz <esm@eduardosm.net>"]
edition = "2021"
rust-version = "1.56"
description = "Auxiliary functions used to encode and decode SISE atom values."
repository = "https://github.com/eduardosm/rust-sise-atom"
license = "MIT OR Apache-2.0"
publish = false
